--- a/modulos/public/html/index.html
+++ b/modulos/public/html/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina web xon javaScript</title>
     
-    <link rel="stylesheet" href="./estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
-<script defer src="./ejemploPromesa.js"></script>
+<script defer src="../../src/index.js"></script>
 </head>
 <body>
     <h1>Hola mundo</h1>
