--- a/modulos/public/html/index.html
+++ b/modulos/public/html/index.html
@@ -7,10 +7,11 @@
     
     <link rel="stylesheet" href="../css/estilos.css">
 
-<script defer src="../../src/index.js"></script>
+<script defer src="../../public/bundle.js"></script>
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <h2>segundo</h2>
     <!-- <script>
     document.write("<h2>Hola mundo</h2>");
     alert('Hola soy una alerta');
